styled inner content and fixed broken collapse by putting class on the paragraph tag

--- a/app/assets/stylesheets/components/_project.scss
+++ b/app/assets/stylesheets/components/_project.scss
@@ -13,4 +13,9 @@
       color: $red;
     }
   }
+
+  .content {
+    display: block;
+    padding: 1rem 0;
+  }
 }
